# se3_rl_lab

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  AGENT_HANDOFF.md  AGENT_SESSION_PROMPTS.md  README.md  pyproject.toml
source/se3_rl_lab/: pyproject.toml  setup.py
source/se3_rl_lab/config/: extension.toml
source/se3_rl_lab/docs/: CHANGELOG.rst
source/se3_rl_lab/se3_rl_lab/: __init__.py  cli.py  serialleg_policy_contract.py  ui_extension_example.py
source/se3_rl_lab/se3_rl_lab/assets/: __init__.py
source/se3_rl_lab/se3_rl_lab/assets/robots/: __init__.py  serialleg.py  serialleg_actuators.py  serialleg_contract.py  serialleg_motors.py
source/se3_rl_lab/se3_rl_lab/assets/robots/serialleg/: robot_config.yaml  scene.xml  serialleg_contract.toml  websim_manifest.json
source/se3_rl_lab/se3_rl_lab/assets/robots/serialleg/mjcf/: serialleg_closed_chain_complex_collision.xml  serialleg_closed_chain_complex_collision_isaaclab_import.xml  serialleg_closed_chain_v3_train_obb_trim.xml  serialleg_closed_chain_v3_train_obb_trim_isaaclab_import.xml  serialleg_closed_chain_visual.xml
source/se3_rl_lab/se3_rl_lab/assets/robots/serialleg/usd/: serialleg_closed_chain_complex_collision.usd  (+1 more)
source/se3_rl_lab/se3_rl_lab/isaac_eval/: __init__.py  camera.py  collision_preview.py  schedule.py  worker.py
source/se3_rl_lab/se3_rl_lab/tasks/manager_based/se3_rl_lab/: __init__.py  recovery_env_cfg.py  se3_rl_lab_env_cfg.py
source/se3_rl_lab/se3_rl_lab/tools/: __init__.py  reports.py  rerun_export.py  runs.py
source/se3_rl_lab/se3_rl_lab/websim/: __init__.py  deployment.py
(+123 files in other folders)
