[build-system]
requires = ["setuptools<82.0.0", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "se3-rl-lab"
version = "0.1.0"
description = "Isaac Lab extension for SE3 wheel-leg training."
requires-python = ">=3.11,<3.12"
dependencies = [
    "isaaclab",
    "isaaclab-assets",
    "isaaclab-mimic",
    "isaaclab-rl[rsl-rl]",
    "isaaclab-tasks",
    "psutil",
    "pyyaml>=6.0,<7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["se3_rl_lab*"]

[tool.setuptools.package-data]
se3_rl_lab = [
    "assets/robots/serialleg/mjcf/*.xml",
    "assets/robots/serialleg/urdf/*.urdf",
    "assets/robots/serialleg/usd/*.usd",
    "assets/robots/serialleg/*.yaml",
    "assets/robots/serialleg/meshes/**/*.stl",
]
